[package]
name = "flava"
version = "0.1.0"
edition = "2021"
[dependencies]
ansi_term = "0.12"
rand = "0.8.5"
regex = "1.5.6"
[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
