[package]
name = "flava"
version = "0.1.0"
authors = ["Sami Ben Chaabane <sami.ben.chaabane10@gmail.com>"]
repository = "https://github.com/SamiBenChaabane/Flava"
license = "BSD-3"
edition = "2021"
[dependencies]
ansi_term = "0.12.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.5.6"
lazy_static="1.4.0"
[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
