[package]
name = "flava"
version = "0.1.0"
authors = ["Sami Ben Chaabane <sami.ben.chaabane10@gmail.com>"]
description = "A simple password toolkit to analyze and generate passwords."
readme = "README.md"
repository = "https://github.com/SamiBenChaabane/Flava"
edition = "2021"
license = "BSD-3-Clause"
keywords = ["password-generator", "password","password-strength","password-safety"]
categories = ["command-line-utilities", "tui"]
[dependencies]
ansi_term = "0.12.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.5.6"
lazy_static="1.4.0"
[profile.release]
debug = false
strip = true
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
